# hatexmpp3

./: .gitignore  Config.hs  HateXMPP.hs  Log.hs  MUC.hs  README.md  TByteVector.hs  Types.hs  hatexmpp3.cabal
.github/workflows/: ci.yml
Control/Concurrent/STM/: TByteVector.hs
GTK/: Chat.hs  GTK.hs  Roster.hs
Network/Xmpp/Extras/: AdHocCommands.hs  Avatar.hs  DateTime.hs  IQAvatar.hs  MUC.hs  VCardAvatar.hs
examples/: alibot.sh  titlebot.sh
examples/glovexmpp/: README  glovexmpp.cabal  glovexmpp.hs
