Name:           hatexmpp3
Version:        0

License:        OtherLicense
License-file:   LICENSE


Build-Type:     Simple
Cabal-Version:  >= 1.2
Tested-With:    GHC == 7.8.4

Executable      hatexmpp
        Main-is:        HateXMPP.hs
        Build-depends:
                        base >= 4 && < 5,
                        pontarius-xmpp >= 0.4.0.1 && < 0.5,
                        Network-NineP >= 0.3.1 && < 0.4,
                        bytestring >= 0.10 && < 0.11,
                        hslogger >= 1.2.8 && < 1.3,
                        stm >= 2.4.4 && < 2.5,
                        mtl >= 2.2.1 && < 2.3,
                        text >= 1.2.0.4 && < 1.3,
                        string-class >= 0.1.6.4 && < 0.2
