Name:           hatexmpp3
Version:        0
License:        OtherLicense
License-file:   LICENSE
Build-Type:     Simple
Cabal-Version:  >= 1.8
Tested-With:    GHC == 8.2.2

flag gtk
        default: True
        manual: True

Executable      hatexmpp
        Main-is:        HateXMPP.hs
        other-modules:
                        Types
                        Config
        ghc-options:    -fno-warn-tabs
        Build-depends:
                        base >= 4 && < 5,
                        pontarius-xmpp >= 0.4.5 && < 0.6,
                        Network-NineP >= 0.4 && < 0.5,
                        bytestring >= 0.10 && < 0.11,
                        hslogger >= 1.2.8 && < 1.3,
                        stm >= 2.4.4 && < 2.5,
                        mtl >= 2.2.1 && < 2.3,
                        text >= 1.2.0.4 && < 1.3,
                        string-class >= 0.1.6.4 && < 0.2,
                        xml-types >= 0.3.4 && < 0.4,
                        tls >= 1.2.18 && < 1.4,
                        containers >= 0.5.6.2 && < 0.6,
                        time >= 1.5.0.1 && < 1.9,
                        transformers >= 0.4.2.0 && < 0.6,
                        data-default >= 0.5.3 && < 0.8,
                        xml-conduit >= 1.3.1 && < 1.9
        if flag(gtk)
                cpp-options: -DGTK
