Name:           hatexmpp3
Version:        0
License:        OtherLicense
License-file:   LICENSE
Build-Type:     Simple
Cabal-Version:  >= 2.0
Tested-With:    GHC == 8.6.5

flag gtk
        default: True
        manual: True

Executable      hatexmpp
        Main-is:        HateXMPP.hs
        other-modules:
                        Types
                        Config
        ghc-options:    -W -fno-warn-tabs -threaded
        default-language: Haskell2010
        Build-depends:
                        base >= 4 && < 5,
                        pontarius-xmpp >= 0.4.5 && < 0.6,
                        pontarius-xmpp-extras ^>= 0.1,
                        Network-NineP >= 0.4 && < 0.5,
                        bytestring >= 0.10 && < 0.11,
                        hslogger >= 1.2.8 && < 1.4,
                        stm >= 2.4.4 && < 2.6,
                        mtl >= 2.2.1 && < 2.3,
                        text >= 1.2.0.4 && < 1.3,
                        string-class >= 0.1.6.4 && < 0.2,
                        xml-types >= 0.3.4 && < 0.4,
                        tls >= 1.2.18 && < 1.6,
                        containers >= 0.5.6.2 && < 0.7,
                        time >= 1.5.0.1 && < 1.11,
                        transformers >= 0.4.2.0 && < 0.6,
                        data-default >= 0.5.3 && < 0.8,
                        xml-conduit >= 1.3.1 && < 1.10,
                        vector >= 0.12.0.3 && < 0.13
        if flag(gtk)
                cpp-options: -DUI_GTK
                build-depends:
                        gtk3 ^>= 0.14,
                        datetime ^>= 0.3.1,
                        monad-loops ^>= 0.4.3
