cabal-version:       2.0
name:                glovexmpp
version:             0.1.0.0
-- synopsis:
-- description:
author:              Sergey Alirzaev
maintainer:          zl29ah@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  README

executable glovexmpp
  main-is:             glovexmpp.hs
  ghc-options:         -fno-warn-tabs -threaded
  build-depends:       base >=4.12 && <4.13,
                       gtk ^>= 0.14,
                       text ^>= 1.2.3.1
  default-language:    Haskell2010
